# loadmaster-worker

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
src/: load_test.rs  main.rs  stats.rs  types.rs
