[package]
name = "loadmaster-worker"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lapin = "2.3"
futures = "0.3"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"

# For HTTP client performance
hyper = "0.14"
tokio-tungstenite = "0.21"

# Statistics
hdrhistogram = "7.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

